@@ -1,4 +1,11 @@
-                           CHANGES IN VERSION 0.6-8 and 0.6-7 (November 2017)
+                           CHANGES IN VERSION 0.6-9 (January 2018)
+						   
+BUG FIXES
+
+-- Fixed a bug where calling nimbleModel() on a BUGS model with a node that was it's own parent caused R to crash.
+
+						   
+						   CHANGES IN VERSION 0.6-8 and 0.6-7 (November 2017)
 
 Note: versions 0.6-8 and 0.6-7 are the same except for a non-user-facing change to the withNimbleOptions function example to pass CRAN checks.
 
